<resources>
    <string name="app_name">hapini CRM</string>
    <string name="content_description">Developer: Kuldeep Sahu</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Create password</string>
    <string name="login_password_hint">Confirm password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Developer team?</string>
    <string name="login_name_hint">Full name</string>
    <string name="login_name_tandc">Accept all T&amp;C</string>
    <string name="login_mobile_number_hint">E-mail</string>

    <string name="hapini">hapini</string>
    <string name="crm">CRM</string>
    <string name="made_in_india">Proudly Made In India</string>
    <string name="version">v 1.0.1</string>
    <string name="copyright">Copyright©|</string>
    <string name="hapini_site">hapini.in</string>

    <string name="welcome">Welcome</string>
    <string name="letstart">Let get started...</string>
    <string name="signOrCreate">Sign in or Create</string>

    <string name="Create_your_EmployeeAC">Create an Admin account!</string>
    <string name="fullName">Full name</string>
    <string name="Email">E-mail</string>
    <string name="PassCode">Pass-Code</string>
    <string name="CP">Create Password</string>
    <string name="CFP">Confirm Password</string>
    <string name="verify">Verify</string>
    <string name="alreadySignIn">Already have a account? Sign In?</string>


    <!--String use in admin Dashboard  -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>


    <!--String use in Feedback Activity-->
    <string name="feedback_note_text">Do you have a suggestion or found some bug? Let us know in the field bellow.</string>

    <!--String use in RateUs Activity-->
    <string name="rate_us_note_text">We work super hard to make hapiniCRM better for you, and would love to know: How would you rate our app?</string>
    <string name="rateusLovetext">Love form hapini CRM</string>

    <!-- String use in Add New Employee Activity-->
    <string name="Hint_device_bulid_number">Device IMEI Number</string>
    <string name="add_new_emp">Add New Employee</string>
    <string name="i_accept">I Accept that Above All the Information is Correct in My View</string>

    <!--Spinner_calling_feedback_item

    <string-array name="Spinner_calling_feedback_item">
        <item>Select Status </item>

        <item>Intersted/Done</item>
        <item>Not Intersted</item>
        <item>Don't PickUp</item>
        <item>Network Issues</item>
        <item>Tell to callback</item>
        <item>Intersted/Issue</item>

    </string-array>
-->


    <string-array name="Spinner_calling_feedback_item">
        <item>Select Status</item>
        <item>Intersted(Done)</item>
        <item>Not Intersted</item>
        <item>Do not PickUp</item>
        <item>Network Issues</item>
        <item>Tell to callback</item>
        <item>Intersted(Issue)</item>
        <item>Wrong Number</item>
        <item>not applicable</item>
        <item>complain</item>


    </string-array>
    <string-array name="Spinner_emp_type">
        <item>Select Employee Type</item>
        <item>candidate</item>
        <item>customerb2b</item>
        <item>customerb2c</item>
        <item>vendors</item>
    </string-array>


    <!-- Spinner user feedback Item -->
    <string-array name="Spinner_user_feedback_item">
        <item>Sort By</item>
        <item>City</item>
        <item>Number</item>
        <item>Name</item>
    </string-array>
    Spinner_Add_doc_item

    <string-array name="Spinner_Add_doc_item">
        <item>Choose Here</item>
        <item>candidate</item>
        <item>vendors</item>
        <item>customerb2b</item>
        <item>customerb2c</item>
    </string-array>


    <!-- Spinner Item -->
    <string-array name="Spinner_item">
        <item>Choose Category</item>
        <item>Admin</item>
        <item>Employee</item>
    </string-array>

    <!-- String use in Add Data Activity -->
    <string name="phoneNumber">Phone Number</string>
    <string name="mark_att">Mark Presence</string>
    <string name="city">City</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_Email">priyanshugupta132@gmailcom</string>


    <string name="privacy_policy">
        <p>Hapini Solutions Pvt. Ltd. understands the price of client (s) privacy. Here, inside the privacy
policy, we tend to unit describing the privacy information that we tend together once you
utilize the services via CRM (CUSTOMERS RELATION MANAGEMENT) and therefore the
method we tend to disclose and use that information. \n</p>


        <p>If anyone of the users set to use services provided by our application, its a necessity that
he or she trust our Privacy Policies and Terms and Conditions.
Hapini resolution designed the hapini CRM app as a Free app. This SERVICE is provided by
Hapini resolution at no worth and is meant to be used as is.
If anyone decides to use our services, This page is employed to tell guests regarding our
policies with the gathering, use, and revelation of non-public information.</p>


        <p>
            If you choose on to use our Service, then you suit the gathering and use of information in
respect to this policy. The private information collected by U.S.A. is used for providing and
up the Service. We will not use or share your information with anyone except as delineate
throughout this Privacy Policy.
        </p>

        <p>The terms utilized throughout this Privacy Policy have a daily meaning as in our Terms and
Conditions, thats accessible at hapini CRM unless otherwise made public throughout this
Privacy Policy. So our app take user permissions on these segments "\n"</p>

        <ul>
            <li><u>INTERNET "\n"</u></li>

            <li><u>ACCESS_NETWORK_STATE "\n"</u></li>

            <li><u>CALL_PHONE "\n"</u></li>

            <li><u>MANAGE_CALLS "\n"</u></li>


            <li><u>READ_EXTERNAL_STORAGE "\n"</u></li>
            <li><u>WRITE_EXTERNAL_STORAGE "\n"</u></li>

            <li><u>READ_PHONE_STATE</u></li>



        </ul>







    </string>

    <string name="Privacy_policy_Information">
        <p>For a much better experience, whereas using our Service, we tend to may wish you to
provide U.S.A. with certain face to face placeable information, at the side of but not restricted
to Network State, Internet, Phone Calls. The knowledge that we tend to request is popping
into to be preserved by U.S.A. and used as delineate throughout this privacy policy.
The app can use third party services which might collect information that may not verify you.
Link to privacy policy of third party service suppliers used by the app.</p>



    </string>
    <string name="Privacy_policy_Information1">

        <ul>
            <li>
                <u>Google Play Services</u>
            </li>

        </ul>
    </string>
    <string name="Privacy_policy_Information2">

        <ul>
            <li>
                 <u>Google Analytics for Firebase</u>
            </li>

        </ul>
    </string>
    <string name="Privacy_policy_Information3">

        <ul>
            <li>
                 <u>Firebase Crashlytics</u>
            </li>
        </ul>
    </string>
    <string name="Privacy_policy_Log_Data">
        Some other dependencies.
We want to tell you that whenever you utilize our Service, throughout a case of a mistake
within the app we tend to gather information {and information|and information|and data}
(through third party products) on your phone referred to as Log knowledge.
This log information consists of your device information science (Internet protocol) address,
name of your device, version of your computer code (OS)
version, our app configuration at the time of service and variety of extra statistics.

    </string>
    <string name="Privacy_policy_Cookies">
        Cookies unit files with barely amount of information that unit usually used as anonymous
distinctive identifiers. These unit sent to your browser from the websites merely|that you just}
merely visit and unit hold on your devices internal memory.
This Service does not use these cookies expressly. However, the app may use third party
code and libraries that use cookies to assemble information and improve their services.
You have the selection to either accept or refuse these cookies and acknowledge once a
cookie is being sent to your device. If you choose to refuse our cookies, you will not be able to
use some elements of this Service.

    </string>
    <string name="Privacy_policy_Service_Providers">
        We may use third-party companies and folks because of later reasons:
To facilitate our Service;
To provide the Service on our behalf;
To perform Service-related services; or
To assist U.S.A. in analyzing, but our Service is used.
We want {to information rm|to tell} users of this Service that these third parties have access
to your Personal info. These service suppliers will perform the tasks assigned on our behalf.
However, they are indebted to not disclose or use the knowledge for the opposite purpose.
        "\n"

    </string>
    <string name="Privacy_policy_Security">
        We try our utmost to use personal information provided by you to verify your safety and
security. But detain mind that no technique of transmission over the online, or technique of
electronic storage is 100% secure and reliable, that we tend to cannot guarantee its absolute
security.
    </string>
    <string name="Privacy_policy_Links">
        This Service may contain links to various sites. If you click on a third-party link, you will be
directed to it computing machine. Note that these external sites are not operated by U.S.A. So
we tend to advise every user to review the privacy policy before using these websites. We have
no management over and assume no responsibility for the content, privacy policies, or
practices of any third-party sites or services.

    </string>
    <string name="Privacy_policy_Children">
        These Services do not address anyone below the age of 13. We tend to do not knowingly
collect face to face placeable information from youngsters below 13 years recent. Within the
case we tend to get that a baby below 13 has provided U.S.A. with personal information, we
tend to straightaway delete this from our servers. If you are a parent or guardian, and you are aware that your child has provided U.S.A. with personal information, please contact U.S.A.
so as that we will be able to do necessary actions.

    </string>
    <string name="Privacy_policy_Changes">
        We may update our Privacy Policy from time to time. Changes to our privacy policy would be
timely updated, so it is powerfully urged to travel to our page oft. {we will|we will|we unit going
to} apprize all our service users if any new changes square measure created in our privacy
policy on this page.
This policy is effective as of 2021-06-25
    </string>
    <string name="Privacy_policy_Contact_Us">
        If you have any queries or suggestions concerning our Privacy Policy, do not hesitate to
contact U.S.A. at
    </string>

    <string name="Privacy_policy_Contact_Us_id">
        <u>support@hapini.in "\n"</u>
    </string>
    <string name="Passcode">passcode</string>


</resources>