<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="24dp"
    android:layout_marginBottom="8dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        style="@style/loginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:fontFamily="@font/aclonica"
        android:text="@string/welcome"
        android:textSize="45sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/letstart"
        android:textSize="28sp" />

    <Button
        android:id="@+id/welcomeAcBtn"
        style="@style/loginButton"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/loginBtnMargin"
        android:layout_marginBottom="20dp"
        android:text="@string/signOrCreate"
        android:textAllCaps="false" />


</LinearLayout>
