<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteCardColor"
    tools:context=".fragment_feedback">

    <!-- TODO: Update blank fragment layout -->

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical" >

            <include layout="@layout/layout_feedback" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@android:color/transparent"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/app_icon"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/content_description"
                    android:layout_marginBottom="5dp"/>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    app:layout_constraintBottom_toTopOf="@+id/textView4"
                    app:layout_constraintEnd_toEndOf="@+id/textView4"
                    app:layout_constraintStart_toStartOf="@+id/textView4">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/copyright"
                        android:textColor="@color/md_black_1000" />

                    <TextView
                        android:id="@+id/hapini_site_mainAC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginLeft="2dp"
                        android:clickable="false"
                        android:text="@string/hapini_site"
                        android:textColor="@color/md_light_blue_A400"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>



        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>