<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="24dp"
    android:layout_marginStart="24dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        style="@style/loginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:fontFamily="@font/aclonica"
        android:text="Hello,"
        android:textSize="42sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="Sign in to continue!"
        android:textSize="23sp" />

    <LinearLayout
        style="@style/parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:background="@color/md_deep_purple_50">

        <Spinner
            android:id="@+id/spinner_login"
            style="@style/modifiedEditText"
            android:layout_width="match_parent"
            android:entries="@array/Spinner_item"
            android:layout_height="match_parent"
            android:spinnerMode="dialog" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        style="@style/parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:background="@color/md_deep_purple_50">

        <EditText
            android:id="@+id/editText_login"
            style="@style/modifiedEditText"
            android:layout_height="50dp"
            android:background="@color/md_deep_purple_50"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        style="@style/parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:background="@color/md_deep_purple_50">

        <EditText
            android:id="@+id/editTextPassword_login"
            style="@style/modifiedEditText"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:layout_height="50dp"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBox_loginAC"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:text="@string/login_name_tandc" />

    <Button
        android:id="@+id/cirLoginButton_login"
        style="@style/loginButton"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/loginBtnMargin"
        android:text="Login" />

    <TextView
        android:id="@+id/I_am_admin_login"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:gravity="end"
        android:text="@string/login_signup_hint"
        android:textColor="@color/primaryTextColor"
        android:textStyle="bold" />

</LinearLayout>